--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ gmqtt = "^0.6.7"
 uvloop = "^0.14.0"
 uvicorn = {extras = ["standard"], version = "^0.12.2"}
 starlette = {extras = ["full"], version = "^0.13.8"}
+sse-starlette = "^0.6.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
