--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,11 @@ uvloop = "^0.14.0"
 uvicorn = {extras = ["standard"], version = "^0.12.2"}
 starlette = {extras = ["full"], version = "^0.13.8"}
 sse-starlette = "^0.6.1"
+x-msgpack = "^0.2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
+debugpy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
