deploy as systemd service on  Raspberry Pi

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         build:
             context: .
             target: web_server
-        restart: always
+        restart: unless-stopped
         ports:
             - 80:80
             - 1883:1883 # EMQX MQTT
@@ -17,7 +17,7 @@ services:
             - app_server
     mqtt_broker: 
         image: emqx/emqx:4.2.2
-        restart: always
+        restart: unless-stopped
         env_file: env/mqtt_broker.env
         networks:
             nginx_network:
@@ -31,7 +31,7 @@ services:
         build:
             context: .
             target: app_server
-        restart: always
+        restart: unless-stopped
         env_file: env/app_server.env
         expose:
             - 8000
@@ -39,7 +39,7 @@ services:
             nginx_network:
                 ipv4_address: 172.20.20.4
         volumes:
-            - ./src:/root/.local/lib/${COMPOSE_PROJECT_NAME}
+            # - ./src:/root/.local/lib/${COMPOSE_PROJECT_NAME}
             - etc_app_server:/root/.local/etc/${COMPOSE_PROJECT_NAME}
 
 volumes:
